app/src/views/stylesheets/index.styl
@import 'nib'

// J : tag
// T : croix
// I : poubelle
// V : editer
// r : editer

global-reset()
reset-html5()

cBgGrey        = lighten(#000000, 20%)
cButtonBorder0 = rgba(255, 255, 255, .3)
cButtonBorder1 = rgba(255, 255, 255, .6)
cButtonBg1     = rgba(255, 255, 255, .1)

@font-face
	font-family "modernpics"
	src url("../font/modernpics.otf")
	
@font-face
	font-family "dense"
	src url("../font/Dense-Regular.otf")

html
	width 100%
	height 100%
	overflow hidden
	background-color cBgGrey
	font-size 16px
	
body
	margin 0 auto
	width 100%
	height 100%
	position relative
	background none

.red
	background-color red
	opacity .8

.green
	background-color green
	opacity .8

.white
	background-color white
	opacity .8
	
#main, #main > .content, #main > .content > .browser, , #main > .content > .browser > .tab
	height 100%

/*===================================================================================
------- MAIN NAVIGATION --------------------------------------------------------------
=====================================================================================*/

// Hacks for mobile design
@media screen and (max-width: 768px) // to detect mobile phones
	.navigation
		width 3em
		height 3em
		overflow hidden
		background-color blue
		.command
			margin auto
			.close
				display none
			.open
				display block
				height 3em
				width 3em
		&.active
			width 75%
			z-index 1
			position absolute
			height 100%
			.command
				.close
					display block
					width 3em
					height 3em
				.open
					display none

// For other displays


/*===================================================================================
------- BROWSER DESIGN --------------------------------------------------------------
=====================================================================================*/

// Hacks for mobile design
@media screen and (max-width: 768px) // to detect mobile phones
	.search-box
		position relative
		top -3em
		left 3em
	.listobjects
		position relative
		top -3em

// For other displays
.search-box
	width 100%
	height 3em
	
.listobjects
	display none
	&.selected
		display block
		height calc(100% - 3em)
	.nav
		height 1em
		li
			display inline-block
	.objects
		display block
		height calc(100% - 1em)
		overflow auto
		li
			padding 1em
			border-left 1px solid cButtonBorder0
			border-right 1px solid cButtonBorder0
			border-bottom 1px solid cButtonBorder0
			&:first-child
				border-top 1px solid cButtonBorder0
			&:hover
				background-color cButtonBg1
				border-left 1px solid cButtonBorder1
				border-right 1px solid cButtonBorder1
				border-bottom 1px solid cButtonBorder1
				&:first-child
					border-top 1px solid cButtonBorder1
			.due
				display inline-block
				width 2em
				text-align center
				padding 0 1em 0 .2em
				opacity 0.3
				vertical-align middle
				font-size 0.8em
				&:hover
					cursor pointer
				&.urgent
					opacity 1
				&.veryurgent
					opacity 1
					color orange
				.day
					display block
					font-size 1.2em
					font-weight bold
				.month
					display block
					text-transform uppercase
					font-size 0.8em
			.labelandtags
				display inline-block
				width calc(100% - 3.2em)
				.tags
					text-align right
				.label
					text-overflow ellipsis
					overflow hidden
					white-space nowrap

